[package]
name = "bns-is"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusturn = "0.0.4"
fibers_global = "0.1.2"
clap = { version = "3", features = ["derive", "env"] }
trackable = "1.2.0"
env_logger = "0.9.0"