[package]
name = "bns-is"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusturn = "0.0.4"
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = "0.7.1"
clap = { version = "3", features = ["derive", "env"] }
env_logger = "0.9.0"
turn = "0.5.4"
util = { package = "webrtc-util", version = "0.5.3", default-features = false, features = ["conn", "vnet"] }